# llvm-obfuscation

./: .gitignore  CMakeLists.txt  README.md
examples/: cff_example.c  cff_example.ll  flattening.c  flattening.ll  foo.ll  hello.c  hello.ll  start.ll  substitution.ll
include/: Flattening.h  Substitution.h
lib/: CMakeLists.txt  Flattening.bck.cpp  Flattening.cpp  Substitution.cpp
plugin/: FlatteningPlugin.cpp  SubstitutionPlugin.cpp
substitution/: CMakeLists.txt  Substitution.cpp
